# andreslist

./: LICENSE  README.md  TODO.md  docker-compose.yml
client/: Dockerfile
server/: .gitignore  Dockerfile  alembic.ini  init_db.py  pyproject.toml
server/app/: __init__.py
server/app/api/: __init__.py
server/app/api/endpoints/: announcements.py  comments.py  events.py  login.py  responses.py  users.py
server/app/core/: security.py
server/app/crud/: __init__.py  base.py  crud_event.py  crud_user.py
server/app/db/: __init__.py
server/app/db/migrations/: env.py
server/app/db/migrations/versions/: 4704cb54abd0_init_events_to_users_tables.py  74be366275f0_init_users_and_events_tables.py  a91d34e623c9_init_responses_and_comments_tables.py
server/app/db/tables/: __init__.py  announcements.py  comments.py  events.py  responses.py  users.py
server/app/models/: ad_response.py  announcement.py  comment.py  event.py  response.py  user.py
server/app/settings/: __init__.py  common.py  db.py
server/app/tests/: conftest.py
server/app/tests/crud/: test_event.py  test_user.py
server/app/tests/utils/: user.py
