[tool.poetry]
name = "andreslist"
version = "0.1.0"
description = ""
authors = ["Andrii Maksymov <maximov.echo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
sqlalchemy = "^1.3.19"
databases = "^0.3.2"
alembic = "^1.4.3"
asyncpg = "^0.21.0"
itsdangerous = "^1.1.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.790"
ipython = "^7.18.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
